--- a/builds/windows/Jub_SDK/Jub_SDK/Jub_SDK.vcxproj
+++ b/builds/windows/Jub_SDK/Jub_SDK/Jub_SDK.vcxproj
@@ -77,7 +77,8 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir)../../../include;$(SolutionDir)../../../deps</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)../../../include;$(SolutionDir)../../../deps;$(SolutionDir)../../../deps/formats</AdditionalIncludeDirectories>
+      <DisableSpecificWarnings>4996;%(DisableSpecificWarnings)</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -105,6 +106,7 @@
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>$(SolutionDir)../../../include;$(SolutionDir)../../../deps;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <DisableSpecificWarnings>4996;%(DisableSpecificWarnings)</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -132,6 +134,21 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\deps\formats\base58.h" />
+    <ClInclude Include="..\..\..\..\deps\formats\bech32.h" />
+    <ClInclude Include="..\..\..\..\deps\formats\hash.h" />
+    <ClInclude Include="..\..\..\..\deps\polarssl\check_config.h" />
+    <ClInclude Include="..\..\..\..\deps\polarssl\config.h" />
+    <ClInclude Include="..\..\..\..\deps\polarssl\md.h" />
+    <ClInclude Include="..\..\..\..\deps\polarssl\md2.h" />
+    <ClInclude Include="..\..\..\..\deps\polarssl\md4.h" />
+    <ClInclude Include="..\..\..\..\deps\polarssl\md5.h" />
+    <ClInclude Include="..\..\..\..\deps\polarssl\md_wrap.h" />
+    <ClInclude Include="..\..\..\..\deps\polarssl\platform.h" />
+    <ClInclude Include="..\..\..\..\deps\polarssl\ripemd160.h" />
+    <ClInclude Include="..\..\..\..\deps\polarssl\sha1.h" />
+    <ClInclude Include="..\..\..\..\deps\polarssl\sha256.h" />
+    <ClInclude Include="..\..\..\..\deps\polarssl\sha512.h" />
     <ClInclude Include="..\..\..\..\include\context\ContextBTC.h" />
     <ClInclude Include="..\..\..\..\include\context\ContextManager.hpp" />
     <ClInclude Include="..\..\..\..\include\device\ApduBuilder.hpp" />
@@ -139,11 +156,24 @@
     <ClInclude Include="..\..\..\..\include\device\DeviceTypeBase.hpp" />
     <ClInclude Include="..\..\..\..\include\device\JubiterHidDevice.hpp" />
     <ClInclude Include="..\..\..\..\include\JUB_SDK.h" />
+    <ClInclude Include="..\..\..\..\include\libBTC\libBTC.hpp" />
     <ClInclude Include="..\..\..\..\include\token\HardwareTokenImpl.hpp" />
     <ClInclude Include="..\..\..\..\include\token\TokenInterface.hpp" />
     <ClInclude Include="..\..\..\..\include\token\TokenManager.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\deps\formats\base58.cpp" />
+    <ClCompile Include="..\..\..\..\deps\formats\bech32.cpp" />
+    <ClCompile Include="..\..\..\..\deps\polarssl\md.c" />
+    <ClCompile Include="..\..\..\..\deps\polarssl\md2.c" />
+    <ClCompile Include="..\..\..\..\deps\polarssl\md4.c" />
+    <ClCompile Include="..\..\..\..\deps\polarssl\md5.c" />
+    <ClCompile Include="..\..\..\..\deps\polarssl\md_wrap.c" />
+    <ClCompile Include="..\..\..\..\deps\polarssl\platform.c" />
+    <ClCompile Include="..\..\..\..\deps\polarssl\ripemd160.c" />
+    <ClCompile Include="..\..\..\..\deps\polarssl\sha1.c" />
+    <ClCompile Include="..\..\..\..\deps\polarssl\sha256.c" />
+    <ClCompile Include="..\..\..\..\deps\polarssl\sha512.c" />
     <ClCompile Include="..\..\..\..\src\context\ContextBTC.cpp" />
     <ClCompile Include="..\..\..\..\src\device\ApduBuilder.cpp" />
     <ClCompile Include="..\..\..\..\src\device\DeviceManager.cpp" />
