交易签名通过

--- a/builds/windows/Jub_SDK/Jub_SDK/Jub_SDK.vcxproj
+++ b/builds/windows/Jub_SDK/Jub_SDK/Jub_SDK.vcxproj
@@ -181,6 +181,7 @@
     <ClCompile Include="..\..\..\..\src\JUB_SDK.cpp" />
     <ClCompile Include="..\..\..\..\src\token\HardwareTokenImpl.cpp" />
     <ClCompile Include="..\..\..\..\src\token\TokenManager.cpp" />
+    <ClCompile Include="..\..\..\..\src\utility\util.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
