--- a/builds/windows/Jub_SDK/Jub_SDK/Jub_SDK.vcxproj
+++ b/builds/windows/Jub_SDK/Jub_SDK/Jub_SDK.vcxproj
@@ -152,8 +152,8 @@
     <ClInclude Include="..\..\..\..\deps\polarssl\sha512.h" />
     <ClInclude Include="..\..\..\..\include\context\ContextBTC.h" />
     <ClInclude Include="..\..\..\..\include\device\ApduBuilder.hpp" />
-    <ClInclude Include="..\..\..\..\include\device\DeviceManager.hpp" />
     <ClInclude Include="..\..\..\..\include\device\DeviceTypeBase.hpp" />
+    <ClInclude Include="..\..\..\..\include\device\JubiterBLEDevice.hpp" />
     <ClInclude Include="..\..\..\..\include\device\JubiterHidDevice.hpp" />
     <ClInclude Include="..\..\..\..\include\JUB_SDK.h" />
     <ClInclude Include="..\..\..\..\include\libBTC\libBTC.hpp" />
@@ -176,7 +176,7 @@
     <ClCompile Include="..\..\..\..\deps\polarssl\sha512.c" />
     <ClCompile Include="..\..\..\..\src\context\ContextBTC.cpp" />
     <ClCompile Include="..\..\..\..\src\device\ApduBuilder.cpp" />
-    <ClCompile Include="..\..\..\..\src\device\DeviceManager.cpp" />
+    <ClCompile Include="..\..\..\..\src\device\JubiterBLEDevice.cpp" />
     <ClCompile Include="..\..\..\..\src\device\JubiterHidDevice.cpp" />
     <ClCompile Include="..\..\..\..\src\JUB_SDK.cpp" />
     <ClCompile Include="..\..\..\..\src\token\JubiterOneImpl.cpp" />
