--- a/builds/windows/Jub_SDK/Jub_SDK/Jub_SDK.vcxproj
+++ b/builds/windows/Jub_SDK/Jub_SDK/Jub_SDK.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="..\..\..\..\include\context\ContextBTC.h" />
     <ClInclude Include="..\..\..\..\include\device\ApduBuilder.hpp" />
     <ClInclude Include="..\..\..\..\include\device\DeviceTypeBase.hpp" />
+    <ClInclude Include="..\..\..\..\include\device\Fido.h" />
     <ClInclude Include="..\..\..\..\include\device\JubiterBLEDevice.hpp" />
     <ClInclude Include="..\..\..\..\include\device\JubiterHidDevice.hpp" />
     <ClInclude Include="..\..\..\..\include\JUB_SDK.h" />
@@ -176,6 +177,7 @@
     <ClCompile Include="..\..\..\..\deps\polarssl\sha512.c" />
     <ClCompile Include="..\..\..\..\src\context\ContextBTC.cpp" />
     <ClCompile Include="..\..\..\..\src\device\ApduBuilder.cpp" />
+    <ClCompile Include="..\..\..\..\src\device\Fido.cpp" />
     <ClCompile Include="..\..\..\..\src\device\JubiterBLEDevice.cpp" />
     <ClCompile Include="..\..\..\..\src\device\JubiterHidDevice.cpp" />
     <ClCompile Include="..\..\..\..\src\JUB_SDK.cpp" />
