--- a/builds/windows/Jub_SDK/Jub_SDK/Jub_SDK.vcxproj
+++ b/builds/windows/Jub_SDK/Jub_SDK/Jub_SDK.vcxproj
@@ -158,10 +158,10 @@
     <ClInclude Include="..\..\..\..\include\device\JubiterHidDevice.hpp" />
     <ClInclude Include="..\..\..\..\include\JUB_SDK.h" />
     <ClInclude Include="..\..\..\..\include\libBTC\libBTC.hpp" />
-    <ClInclude Include="..\..\..\..\include\token\BTCTokenInterface.hpp" />
-    <ClInclude Include="..\..\..\..\include\token\ETHTokenInterface.hpp" />
+    <ClInclude Include="..\..\..\..\include\token\interface\BTCTokenInterface.hpp" />
+    <ClInclude Include="..\..\..\..\include\token\interface\ETHTokenInterface.hpp" />
+    <ClInclude Include="..\..\..\..\include\token\interface\TokenInterface.hpp" />
     <ClInclude Include="..\..\..\..\include\token\JubiterBLDImpl.h" />
-    <ClInclude Include="..\..\..\..\include\token\TokenInterface.hpp" />
     <ClInclude Include="..\..\..\..\include\utility\xManager.hpp" />
   </ItemGroup>
   <ItemGroup>
@@ -184,6 +184,8 @@
     <ClCompile Include="..\..\..\..\src\device\JubiterHidDevice.cpp" />
     <ClCompile Include="..\..\..\..\src\JUB_SDK.cpp" />
     <ClCompile Include="..\..\..\..\src\token\JubiterBLDImpl.cpp" />
+    <ClCompile Include="..\..\..\..\src\token\JubiterBLDImplBTC.cpp" />
+    <ClCompile Include="..\..\..\..\src\token\JubiterBLDImplETH.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\util.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
