--- a/builds/windows/Jub_SDK/Jub_SDK/Jub_SDK.vcxproj.filters
+++ b/builds/windows/Jub_SDK/Jub_SDK/Jub_SDK.vcxproj.filters
@@ -46,6 +46,9 @@
     <Filter Include="Source Files\utility">
       <UniqueIdentifier>{426ad477-8275-4fcf-a2f5-7a1bcfc5a387}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\token\interface">
+      <UniqueIdentifier>{0ae04d6f-2cfb-4a84-b6bc-a5cb3fd33b07}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
@@ -62,9 +65,6 @@
     </ClInclude>
     <ClInclude Include="..\..\..\..\include\device\JubiterHidDevice.hpp">
       <Filter>Header Files\device</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\..\include\token\TokenInterface.hpp">
-      <Filter>Header Files\token</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\include\context\ContextBTC.h">
       <Filter>Header Files\context</Filter>
@@ -126,14 +126,17 @@
     <ClInclude Include="..\..\..\..\include\device\Fido.h">
       <Filter>Header Files\device</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\include\token\BTCTokenInterface.hpp">
-      <Filter>Header Files\token</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\..\include\token\ETHTokenInterface.hpp">
-      <Filter>Header Files\token</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\..\include\token\JubiterBLDImpl.h">
       <Filter>Header Files\token</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\token\interface\BTCTokenInterface.hpp">
+      <Filter>Header Files\token\interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\token\interface\ETHTokenInterface.hpp">
+      <Filter>Header Files\token\interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\token\interface\TokenInterface.hpp">
+      <Filter>Header Files\token\interface</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -195,6 +198,12 @@
       <Filter>Source Files\device</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\src\token\JubiterBLDImpl.cpp">
+      <Filter>Source Files\token</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\token\JubiterBLDImplBTC.cpp">
+      <Filter>Source Files\token</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\token\JubiterBLDImplETH.cpp">
       <Filter>Source Files\token</Filter>
     </ClCompile>
   </ItemGroup>
