--- a/builds/windows/Jub_SDK/Jub_SDK/Jub_SDK.vcxproj
+++ b/builds/windows/Jub_SDK/Jub_SDK/Jub_SDK.vcxproj
@@ -150,7 +150,9 @@
     <ClInclude Include="..\..\..\..\deps\polarssl\sha1.h" />
     <ClInclude Include="..\..\..\..\deps\polarssl\sha256.h" />
     <ClInclude Include="..\..\..\..\deps\polarssl\sha512.h" />
+    <ClInclude Include="..\..\..\..\include\context\Context.h" />
     <ClInclude Include="..\..\..\..\include\context\ContextBTC.h" />
+    <ClInclude Include="..\..\..\..\include\context\ContextETH.h" />
     <ClInclude Include="..\..\..\..\include\device\ApduBuilder.hpp" />
     <ClInclude Include="..\..\..\..\include\device\DeviceTypeBase.hpp" />
     <ClInclude Include="..\..\..\..\include\device\Fido.h" />
@@ -177,7 +179,9 @@
     <ClCompile Include="..\..\..\..\deps\polarssl\sha1.c" />
     <ClCompile Include="..\..\..\..\deps\polarssl\sha256.c" />
     <ClCompile Include="..\..\..\..\deps\polarssl\sha512.c" />
+    <ClCompile Include="..\..\..\..\src\context\Context.cpp" />
     <ClCompile Include="..\..\..\..\src\context\ContextBTC.cpp" />
+    <ClCompile Include="..\..\..\..\src\context\ContextETH.cpp" />
     <ClCompile Include="..\..\..\..\src\device\ApduBuilder.cpp" />
     <ClCompile Include="..\..\..\..\src\device\Fido.cpp" />
     <ClCompile Include="..\..\..\..\src\device\JubiterBLEDevice.cpp" />
