完成eth的sdk与测试代码，等待硬件测试

--- a/builds/windows/Jub_SDK/Jub_SDK/Jub_SDK.vcxproj
+++ b/builds/windows/Jub_SDK/Jub_SDK/Jub_SDK.vcxproj
@@ -160,6 +160,8 @@
     <ClInclude Include="..\..\..\..\include\device\JubiterHidDevice.hpp" />
     <ClInclude Include="..\..\..\..\include\JUB_SDK.h" />
     <ClInclude Include="..\..\..\..\include\libBTC\libBTC.hpp" />
+    <ClInclude Include="..\..\..\..\include\libETH\ByteConverter.h" />
+    <ClInclude Include="..\..\..\..\include\libETH\ERC20Abi.h" />
     <ClInclude Include="..\..\..\..\include\token\interface\BTCTokenInterface.hpp" />
     <ClInclude Include="..\..\..\..\include\token\interface\ETHTokenInterface.hpp" />
     <ClInclude Include="..\..\..\..\include\token\interface\TokenInterface.hpp" />
@@ -187,6 +189,8 @@
     <ClCompile Include="..\..\..\..\src\device\JubiterBLEDevice.cpp" />
     <ClCompile Include="..\..\..\..\src\device\JubiterHidDevice.cpp" />
     <ClCompile Include="..\..\..\..\src\JUB_SDK.cpp" />
+    <ClCompile Include="..\..\..\..\src\libETH\ByteConverter.cpp" />
+    <ClCompile Include="..\..\..\..\src\libETH\ERC20Abi.cpp" />
     <ClCompile Include="..\..\..\..\src\token\JubiterBLDImpl.cpp" />
     <ClCompile Include="..\..\..\..\src\token\JubiterBLDImplBTC.cpp" />
     <ClCompile Include="..\..\..\..\src\token\JubiterBLDImplETH.cpp" />
