--- a/builds/windows/Jub_SDK/test/JUB_SDK_test.vcxproj.filters
+++ b/builds/windows/Jub_SDK/test/JUB_SDK_test.vcxproj.filters
@@ -5,10 +5,6 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
-    </Filter>
     <Filter Include="Resource Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
@@ -21,28 +17,24 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stdafx.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="targetver.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+    <ClCompile Include="..\..\..\..\src\test\JUB_SDK_test\JUB_SDK_test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\test\JUB_SDK_test\stdafx.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\deps\jsoncpp\src\lib_json\json_reader.cpp">
+      <Filter>deps</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\deps\jsoncpp\src\lib_json\json_value.cpp">
+      <Filter>deps</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\deps\jsoncpp\src\lib_json\json_writer.cpp">
+      <Filter>deps</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="stdafx.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="JUB_SDK_test.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\deps\jsoncpp\src\lib_json\json_reader.cpp">
-      <Filter>deps</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\deps\jsoncpp\src\lib_json\json_value.cpp">
-      <Filter>deps</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\deps\jsoncpp\src\lib_json\json_writer.cpp">
-      <Filter>deps</Filter>
-    </ClCompile>
+    <ClInclude Include="..\..\..\..\src\test\JUB_SDK_test\stdafx.h" />
+    <ClInclude Include="..\..\..\..\src\test\JUB_SDK_test\targetver.h" />
   </ItemGroup>
 </Project>
