--- a/builds/windows/Jub_SDK/test/JUB_SDK_test.vcxproj
+++ b/builds/windows/Jub_SDK/test/JUB_SDK_test.vcxproj
@@ -155,18 +155,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <Text Include="ReadMe.txt" />
+    <Text Include="..\..\..\..\test\JUB_SDK_test\ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\deps\jsoncpp\src\lib_json\json_reader.cpp" />
     <ClCompile Include="..\..\..\..\deps\jsoncpp\src\lib_json\json_value.cpp" />
     <ClCompile Include="..\..\..\..\deps\jsoncpp\src\lib_json\json_writer.cpp" />
-    <ClCompile Include="..\..\..\..\src\test\JUB_SDK_test\JUB_SDK_test.cpp" />
-    <ClCompile Include="..\..\..\..\src\test\JUB_SDK_test\stdafx.cpp" />
+    <ClCompile Include="..\..\..\..\test\JUB_SDK_test\JUB_SDK_test.cpp" />
+    <ClCompile Include="..\..\..\..\test\JUB_SDK_test\stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\src\test\JUB_SDK_test\stdafx.h" />
-    <ClInclude Include="..\..\..\..\src\test\JUB_SDK_test\targetver.h" />
+    <ClInclude Include="..\..\..\..\test\JUB_SDK_test\stdafx.h" />
+    <ClInclude Include="..\..\..\..\test\JUB_SDK_test\targetver.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
