--- a/builds/windows/Jub_SDK/test/JUB_SDK_test.vcxproj.filters
+++ b/builds/windows/Jub_SDK/test/JUB_SDK_test.vcxproj.filters
@@ -14,15 +14,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="ReadMe.txt" />
+    <Text Include="..\..\..\..\test\JUB_SDK_test\ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\src\test\JUB_SDK_test\JUB_SDK_test.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\..\src\test\JUB_SDK_test\stdafx.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\..\deps\jsoncpp\src\lib_json\json_reader.cpp">
       <Filter>deps</Filter>
     </ClCompile>
@@ -32,9 +26,15 @@
     <ClCompile Include="..\..\..\..\deps\jsoncpp\src\lib_json\json_writer.cpp">
       <Filter>deps</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\test\JUB_SDK_test\JUB_SDK_test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\test\JUB_SDK_test\stdafx.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\src\test\JUB_SDK_test\stdafx.h" />
-    <ClInclude Include="..\..\..\..\src\test\JUB_SDK_test\targetver.h" />
+    <ClInclude Include="..\..\..\..\test\JUB_SDK_test\stdafx.h" />
+    <ClInclude Include="..\..\..\..\test\JUB_SDK_test\targetver.h" />
   </ItemGroup>
 </Project>
