--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,16 +8,6 @@ if(MSVC)   # msvc
 
     if("${CMAKE_SIZEOF_VOID_P}" STREQUAL "4")   #x86
 
-        FIND_LIBRARY(JUB_SDK_LIBRARY_RELEASE
-        NAMES Jub_SDK
-        PATHS ${CMAKE_SOURCE_DIR}/builds/windows/Jub_SDK/Release
-        )
-
-        FIND_LIBRARY(JUB_SDK_LIBRARY_DEBUG
-        NAMES Jub_SDK 
-        PATHS ${CMAKE_SOURCE_DIR}/builds/windows/Jub_SDK/Debug
-        )
-
         FIND_LIBRARY(HID_API_LIBRARY_RELEASE
         NAMES hidapi
         PATHS ${CMAKE_SOURCE_DIR}/deps/hidapi/libhidapi
@@ -29,16 +19,6 @@ if(MSVC)   # msvc
         )
 
     elseif("${CMAKE_SIZEOF_VOID_P}" STREQUAL "8") #x64
-
-        FIND_LIBRARY(JUB_SDK_LIBRARY_RELEASE
-        NAMES Jub_SDK
-        PATHS ${CMAKE_SOURCE_DIR}/builds/windows/Jub_SDK/x64/Release
-        )
-
-        FIND_LIBRARY(JUB_SDK_LIBRARY_DEBUG
-        NAMES Jub_SDK 
-        PATHS ${CMAKE_SOURCE_DIR}/builds/windows/Jub_SDK/x64/Debug
-        )
 
         FIND_LIBRARY(HID_API_LIBRARY_RELEASE
         NAMES hidapi
@@ -59,13 +39,11 @@ SET(JUB_SDK_LIBRARY debug ${JUB_SDK_LIBRARY_DEBUG} optimized ${JUB_SDK_LIBRARY_R
 SET(HID_API_LIBRARY debug ${HID_API_LIBRARY_DEBUG} optimized ${HID_API_LIBRARY_RELEASE})
 
 
-
 message("==========================")
-message("${JUB_SDK_LIBRARY}   ${HID_API_LIBRARY}")
+message("${CMAKE_SIZEOF_VOID_P}  ${JUB_SDK_LIBRARY}   ${HID_API_LIBRARY} " )
 
 add_executable(test "JUB_SDK_test/JUB_SDK_test.cpp" ${SRC_LIST})
 
 #user lib
-target_link_libraries(test ${JUB_SDK_LIBRARY} ${HID_API_LIBRARY})
-#system lib
-target_link_libraries(test Setupapi)
+target_link_libraries(test PRIVATE JUB_SDK ${HID_API_LIBRARY} Setupapi)
+
