--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ aux_source_directory(${CMAKE_SOURCE_DIR}/src/utility SRC_LIST)
 aux_source_directory(${CMAKE_SOURCE_DIR}/src/context SRC_LIST)
 aux_source_directory(${CMAKE_SOURCE_DIR}/src/device SRC_LIST)
 aux_source_directory(${CMAKE_SOURCE_DIR}/src/libETH SRC_LIST)
+aux_source_directory(${CMAKE_SOURCE_DIR}/src/libBCH SRC_LIST)
 aux_source_directory(${CMAKE_SOURCE_DIR}/src/token SRC_LIST)
 aux_source_directory(${CMAKE_SOURCE_DIR}/deps/formats SRC_LIST)
 aux_source_directory(${CMAKE_SOURCE_DIR}/deps/polarssl SRC_LIST)
